# PLARRDraft

pilotTest/: CMakeLists.txt  main.cpp
pilotTest/src/: main.cpp
trackingLive/: testingopencv.sln  trackingLive.sln
trackingLive/testingopencv/: testingopencv.vcxproj
trackingLive/trackingLive/: main.cpp  trackingLive.vcxproj
